[tool.poetry]
name = "vas3k_scraper"
version = "0.1.1"
description = "Telegram links scraper from vask.club engine"
authors = ["Shwartin https://github.com/shwartin"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
loguru = "^0.6.0"
beautifulsoup4 = "^4.11.1"
pydantic = "^1.9.0"
python-dotenv = "^0.20.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
